Home care module

--- a/veoc/templates/veoc/f_up.html
+++ b/veoc/templates/veoc/f_up.html
@@ -46,8 +46,10 @@
                           <tbody>
                           {% for d in data %}
                           <tr>
-                            <td>{{ d.last_name }}</td>
-                            <td>{{ d.first_name }}</td>
+                            <td>*********</td>
+                            <td>*********</td>
+{#                            <td>{{ d.last_name }}</td>#}
+{#                            <td>{{ d.first_name }}</td>#}
                             <td>{{ d.age }}</td>
                             <td>{{ d.sex }}</td>
                             <td>{{ d.phone_number }}</td>
