--- a/veoc/templates/veoc/quarantine_list.html
+++ b/veoc/templates/veoc/quarantine_list.html
@@ -64,6 +64,9 @@
                           <tbody>
                           {% for follow in quarantine_data %}
                           <tr>
+                          {#                                  Check user permission to view names#}
+{#                            <td>*********</td>#}
+{#                            <td>*********</td>#}
                             <td>{{ follow.last_name }}</td>
                             <td>{{ follow.first_name }}</td>
                             <td>{{ follow.age }}</td>
