--- a/veoc/templates/veoc/main_template.html
+++ b/veoc/templates/veoc/main_template.html
@@ -256,6 +256,19 @@
           </li>
           <li>
               <a href="#"><span class="fa-stack fa-lg pull-left">
+                <i class="fa fa-clipboard fa-stack-1x "></i>
+              </span>HOME CARE REPORTS</a>
+              <ul class="nav-pills nav-stacked" style="list-style-type:none;">
+                  <li><a href="/home_care_list"><span class="fa-stack fa-lg pull-left"><i
+                          class="fa fa-medkit fa-stack-1x "></i></span>Home Care List</a></li>
+                  <li><a href="/follow_up"><span class="fa-stack fa-lg pull-left"><i
+                          class="fa fa fa-ambulance fa-stack-1x "></i></span>Ongoing Home Care</a></li>
+                  <li><a href="/complete_quarantine"><span class="fa-stack fa-lg pull-left"><i
+                          class="fa fa-handshake-o fa-stack-1x "></i></span>Completed Home Care</a></li>
+              </ul>
+          </li>
+          <li>
+              <a href="#"><span class="fa-stack fa-lg pull-left">
                   <i class="fa fa-credit-card fa-stack-1x"></i>
                     </span>TEMPLATE REPORTS</a>
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
