--- a/veoc/templates/veoc/main_template.html
+++ b/veoc/templates/veoc/main_template.html
@@ -181,6 +181,8 @@
                           class="fa fa-handshake-o fa-stack-1x "></i></span>Events Register</a></li>
                   <li><a href="/quarantine_register"><span class="fa-stack fa-lg pull-left"><i
                       class="fa fa-address-card fa-stack-1x"></i></span>COVID-19 Quarantine</a></li>
+                  <li><a href="/quarantine_file_register"><span class="fa-stack fa-lg pull-left"><i
+                      class="fa fa-file fa-stack-1x"></i></span>Quaranitine File Upload</a></li>
               </ul>
           </li>
           <li>
