--- a/veoc/templates/veoc/truck_driver_registration.html
+++ b/veoc/templates/veoc/truck_driver_registration.html
@@ -1,6 +1,49 @@
 {% extends "veoc/main_template.html" %}
 {% block main %}
-      <div id="main-container">
+    <style>
+        body {font-family: Arial, Helvetica, sans-serif;}
+
+        /* The Modal (background) */
+        .modal {
+          display: none; /* Hidden by default */
+          position: fixed; /* Stay in place */
+          z-index: 1; /* Sit on top */
+          padding-top: 100px; /* Location of the box */
+          left: 0;
+          top: 0;
+          width: 100%; /* Full width */
+          height: 100%; /* Full height */
+          overflow: auto; /* Enable scroll if needed */
+          background-color: rgb(0,0,0); /* Fallback color */
+          background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+        }
+
+        /* Modal Content */
+        .modal-content {
+            background-color: #fefefe;
+            text-align: center;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 40%;
+        }
+
+        /* The Close Button */
+        .close {
+          color: #aaaaaa;
+          float: right;
+          font-size: 28px;
+          font-weight: bold;
+        }
+
+        .close:hover,
+        .close:focus {
+          color: #000;
+          text-decoration: none;
+          cursor: pointer;
+        }
+    </style>
+    <div id="main-container">
         <div id="breadcrumb">
           <ul class="breadcrumb">
              <li><i class="fa fa-home"></i><a href="{% url 'veoc:access_dashboard' %}"> Dashboard</a></li>
@@ -11,10 +54,10 @@
         <div class="padding-md">
           <div class="row">
             <div class="col-md-12">
-                  <form class="track_driver_form" method="POST" action="{% url 'veoc:truck_driver_register' %}" >
+                  <form method="POST" id="track_driver_form"action="{% url 'veoc:truck_driver_register' %}" enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="form-group col-md-12">
-                      <h5><font color="#FF0000"><b><u>NB</u> : Inputs with * must have values, Fill in all sections.</b></font></h5>
+                        <h5><font color="#FF0000"><b><u>NB</u> : Inputs with * must have values, Fill in all sections.</b></font></h5>
                     </div>
                     <div class="form-group col-md-12">
                       <h4 align="center"><b><u>SECTION A : TRAVELLER / TRUCK DRIVER DETAILS</u></b></h4>
@@ -136,11 +179,21 @@
                         <label for="firstname">Street : </label>
                         <input class="form-control" type="text" id="street" name="street" size="45" placeholder="Strees" />
                       </div>
-                       <div class="form-group col-md-6">
-                         <label for="datereport">Date of Arrival : *</label>
-                         <input class="form-control" type="date" value="{{ day }}" id="date_of_arrival" max="{{ day }}" name="date_of_arrival">
-                       </div>
-                     </div>
+                        <div class="form-group col-md-6">
+                             <label for="datereport">Date of Arrival : *</label>
+                             <input class="form-control" type="date" value="{{ day }}" id="date_of_arrival" max="{{ day }}" name="date_of_arrival">
+                        </div>
+                    </div>
+
+                    <div id="myModal" class="modal">
+                        <div class="modal-content">
+                            <span class="close" onclick="document.getElementById('myModal').style.display='none'">&times;</span>
+                            <label>Driver Image:</label><br><br>
+                            <label class="btn btn-primary">
+                            <i class="fa fa-image"></i> Take photo <input type="file" name="photo" style="display: none;" accept="image/*" capture id="imgInp"></label><br><br>
+                            <img id="blah" src="#" style="width: 300px; height: 300px;" onerror="this.onerror=null; this.src='http://ssl.gstatic.com/accounts/ui/avatar_2x.png'"/>
+                        </div>
+                    </div>
                       <div class="form-row col-md-12">
                         <h4 align="center"><b><u>SECTION B : CURRENT HEALTH SITUATION</u></b></h4>
                         <br>
@@ -269,12 +322,15 @@
                          <textarea class="form-control" id="action_taken" rows="3" name="action_taken" placeholder="Enter action taken"></textarea>
                        </div>
                      </div>
-                     <div class="form-row" id="save_div">
-                       <div class="form-group col-md-12">
-                         <button type="submit" id="save_button" class="btn btn-primary">Save</button>
-                       </div>
-                     </div>
+                      <div class="form-row" id="save_div">
+                        <div class="form-group col-md-12">
+                            <button type="submit" id="save_button" class="btn btn-primary">Save</button>
+                        </div>
+                          <div class="form-group col-md-12">
+                          </div>
+                      </div>
                   </form>
+                <button id="myBtn" class="btn btn-primary">Take Driver Picture</button>
                 </div>
         			</div><!-- /row-->
         		<div class="row">
@@ -292,9 +348,49 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"> </script>
    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
    <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
-
     <script>
+        // Get the modal
+        var modal = document.getElementById("myModal");
 
+        // Get the button that opens the modal
+        var btn = document.getElementById("myBtn");
+
+        // Get the <span> element that closes the modal
+        var span = document.getElementsByClassName("close")[0];
+
+        // When the user clicks the button, open the modal
+        btn.onclick = function() {
+          modal.style.display = "block";
+        }
+
+        // When the user clicks on <span> (x), close the modal
+        span.onclick = function() {
+            console.log("dddddddddddd")
+          modal.style.display = "none";
+        }
+
+        // When the user clicks anywhere outside of the modal, close it
+        window.onclick = function(event) {
+          if (event.target == modal) {
+            modal.style.display = "none";
+          }
+        }
+        </script>
+    <script>
+    function readURL(input) {
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+
+            reader.onload = function (e) {
+                $('#blah').attr('src', e.target.result);
+        }
+        reader.readAsDataURL(input.files[0]);
+        }
+    }
+
+    $("#imgInp").change(function(){
+        readURL(this);
+    });
     var today = new Date();
     var dd = today.getDate();
     var mm = today.getMonth()+1; //January is 0!
@@ -315,7 +411,7 @@
 
 
       var trucksForm = $(".track_driver_form")
-      console.log(trucksForm);
+      console.log("ab", new FormData(track_driver_form));
 
       trucksForm.submit(function(e){
         e.preventDefault();
