home care follow up

--- a/veoc/templates/veoc/home_care_follow_up.html
+++ b/veoc/templates/veoc/home_care_follow_up.html
@@ -9,7 +9,7 @@
         			<div id="breadcrumb">
         				<ul class="breadcrumb">
         					 <li><i class="fa fa-home"></i><a href="{% url 'veoc:access_dashboard' %}"> Dashboard</a></li>
-        					 <li class="active">Quarantine Follow Up</li>
+        					 <li class="active">Home Care Follow Up</li>
         				</ul>
         			</div><!-- /breadcrumb-->
 
@@ -30,14 +30,14 @@
                   <!-- <button type="submit" class="btn btn-primary" align="right">Update</button> -->
               </div>
 
-              <div class="panel-heading"><b>COVID19 Quarantine Follow Up Report</b></div>
+              <div class="panel-heading"><b>COVID19 Home Care Follow Up Report</b></div>
 
         			<div class="padding-md">
         				<div class="row">
         					<div class="col-md-12">
         						<div class="panel panel-default table-responsive">
         							<div class="panel-heading">
-        								Quarantine Follow Up Report
+        								Home Care Follow Up Report
         								<span class="label label-info pull-right" id="totalspan">{{follow_data_count}} Reported cases </span>
         							</div>
         							<div class="padding-md clearfix">
