--- a/veoc/templates/veoc/quarantine_list.html
+++ b/veoc/templates/veoc/quarantine_list.html
@@ -14,11 +14,26 @@
         			</div><!-- /breadcrumb-->
 
               <div class="panel-heading">QUARANTINE CASES DATA FILTERS</div>
+                <div class="panel-body" align="left">
+                  <form class="form-inline" method="post" action="{% url 'veoc:quarantine_list' %}">{% csrf_token %}
+                      <div class="form-group">
+                        <label for="email">From :</label>
+                        <input class="form-control" type="date" id="date_from" name="date_from" value="{{ start_day }}" required>
+                      </div>
+                        &nbsp; &nbsp;
+                      <div class="form-group">
+                        <label for="pwd">To :</label>
+                        <input class="form-control" type="date" id="date_to" name="date_to" value="{{ end_day }}" required>
+                      </div>
+                      <button type="submit" class="btn btn-primary" >UPDATE</button>
+                    </form>
+                  <!-- <button type="submit" class="btn btn-primary" align="right">Update</button> -->
+              </div>
               <div class="panel-body" align="left">
                   <form class="form-inline" method="post" action="{% url 'veoc:quarantine_list' %}">
                     {% csrf_token %}
                       <div class="form-group">
-                          <label for="site"><b>Filter by Quarantine Site :&nbsp; &nbsp; </b></label>
+                          <label for="site"><b>Quarantine Site :&nbsp; &nbsp; </b></label>
                           <select class="form-control" id="quarantine_site" name="quarantine_site">
                              <option value="" disabled selected>Select Quarantine Site</option>
                              {% for quar_site in quar_sites %}
@@ -27,7 +42,7 @@
                          </select>
                       </div>
 
-                      <button type="submit" class="btn btn-primary" align="right">Update</button>
+                      <button type="submit" class="btn btn-primary" align="right">UPDATE</button>
                   </form>
                   <!-- <button type="submit" class="btn btn-primary" align="right">Update</button> -->
               </div>
