--- a/veoc/templates/veoc/truck_driver_registration.html
+++ b/veoc/templates/veoc/truck_driver_registration.html
@@ -99,7 +99,7 @@
                     </div>
                     <div class="form-row" id="gender_details_div">
                        <div class="form-group col-md-6">
-                         <label for="borderpoint">Border Point : </label>
+                         <label for="borderpoint">Border Point : *</label>
                          <select class="form-control" name="border_name" id="border_name" >
                               <option value="" disabled selected>Select Border Point</option>
                               {% for b_point in border_points %}
@@ -147,7 +147,7 @@
                       </div>
                      <div class="form-row" id="symptoms_div">
                        <div class="form-group col-md-3">
-                         <label for="cough">Cough : </label>
+                         <label for="cough">Cough : *</label>
                          <select class="form-control" id="cough" name="cough" required>
                            <option value="" disabled selected>Select Option</option>
                            <option value="t">Yes</option>
@@ -155,7 +155,7 @@
                          </select>
                        </div>
                        <div class="form-group col-md-3">
-                         <label for="breathing">Breathing Difficulty : </label>
+                         <label for="breathing">Breathing Difficulty : *</label>
                          <select class="form-control" id="breathing_difficulty" name="breathing_difficulty" required>
                            <option value="" disabled selected>Select Option</option>
                            <option value="t">Yes</option>
@@ -163,7 +163,7 @@
                          </select>
                        </div>
                        <div class="form-group col-md-3">
-                         <label for="fever">Fever : </label>
+                         <label for="fever">Fever : *</label>
                          <select class="form-control" id="fever" name="fever" required>
                            <option value="" disabled selected>Select Option</option>
                            <option value="t">Yes</option>
@@ -171,7 +171,7 @@
                          </select>
                        </div>
                        <div class="form-group col-md-3">
-                         <label for="sample">Sample Taken : </label>
+                         <label for="sample">Sample Taken : *</label>
                          <select class="form-control" id="sample_taken" name="sample_taken" required>
                            <option value="" disabled selected>Select Option</option>
                            <option value="t">Yes</option>
